# healthIA

./: .gitignore  .gitmessage  CLAUDE.md  CONTRIBUTING.md  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx
dashboard/src/api/: client.ts
docs/: ARCHITECTURE.md  DATA_MODEL.md  ENGINES.md  ROADMAP.md
notas/: Pendencias.md  Registro-de-Sessoes.md
notas/ADR/: ADR-001-migracao-para-nuvem.md  ADR-002-schema-compartilhado-supabase.md  ADR-003-ai-providers-via-fetch-rest.md
scripts/: ci.sh
server/: pyproject.toml
server/app/: config.py  main.py
server/app/api/: deps.py  events.py
server/app/domain/: models.py  repositories.py
server/app/normalization/: __init__.py  manual.py  registry.py  reprocess.py  service.py
server/app/repositories/sqlite/: connection.py  event_repository.py  migrations.py  raw_record_repository.py
server/migrations/: 001_initial.sql
server/tests/: test_api_events.py  test_event_repository.py  test_health.py  test_migrations.py  test_normalization_manual.py  test_raw_record_repository.py  test_reprocess.py
sync-app/: .env.example  app.json  eas.json  package-lock.json  package.json
sync-app/src/: App.tsx
sync-app/src/background/: backgroundSync.ts
sync-app/src/config/: env.ts
sync-app/src/lib/: deviceId.ts  healthConnect.ts  queue.ts  recordMapping.ts  secureStoreAdapter.ts  supabase.ts  (+1 more)
web/: .env.example  package-lock.json  package.json  vercel.json
web/public/: manifest.webmanifest  sw.js
web/src/: proxy.ts
(+210 files in other folders)
